Fix ritual altar errors